--- a/web systems/design.css
+++ b/web systems/design.css
@@ -261,7 +261,7 @@ td {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background-image: url('Snowbreak.png');
+	background-image: url('snowbreak.png');
 }	
 
 .Gthree h1 {
